fead added stats section

--- a/index.html
+++ b/index.html
@@ -73,5 +73,32 @@
       </div>
     </div>
     <!-- home section ends -->
+    <!-- stats section starts -->
+    <section class="stats">
+      <div class="container">
+        <div class="stats__wrapper">
+          <div class="starts__item">
+            <h2 class="starts__title section__title">1200</h2>
+            <p class="starts__description">students graduet</p>
+          </div>
+          <div class="starts__item">
+            <span class="stats__circle"></span>
+            <h2 class="starts__title section__title">84</h2>
+            <p class="starts__description">complited coursers</p>
+          </div>
+          <div class="starts__item">
+            <span class="stats__circle"></span>
+            <h2 class="starts__title section__title">16</h2>
+            <p class="starts__description">qualified tutors</p>
+          </div>
+          <div class="starts__item">
+            <span class="stats__circle"></span>
+            <h2 class="starts__title section__title">5</h2>
+            <p class="starts__description">years of expreince</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- starts section ends -->
   </body>
 </html>
