feat: added background image for hero

--- a/index.html
+++ b/index.html
@@ -8,97 +8,103 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- header section starts -->
-    <div class="container">
-      <header class="header">
-        <div class="header__wrapper">
-          <div class="header__left">
-            <a href="./index.html" class="header__logo">
-              <img src="./images/logo.png" alt="logo image" />
-            </a>
-            <nav class="header__navbar">
-              <ul class="header__list">
-                <li class="header__item">
-                  <a href="#" class="header__link">about us</a>
-                </li>
-                <li class="header__item">
-                  <a href="#" class="header__link">courser</a>
-                </li>
-                <li class="header__item">
-                  <a href="#" class="header__link">events</a>
-                </li>
-                <li class="header__item">
-                  <a href="#" class="header__link">blog</a>
-                </li>
-                <li class="header__item">
-                  <a href="#" class="header__link">contacts</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div class="header__right">
-            <button class="header__btn section__btn1">get consultation</button>
-            <button class="header__auth">log in / register</button>
-            <img
-              class="header__profile"
-              src="./images/icons/Profile.svg"
-              alt="profile icon"
-            />
-          </div>
-        </div>
-      </header>
-    </div>
-    <!-- header section ends -->
-    <!-- home section starts -->
-    <div class="home">
+    <div class="hero">
+      <!-- header section starts -->
       <div class="container">
-        <div class="home__wrapper">
-          <div class="home__left">
-            <a class="home__play" href="#">
-              <img src="" alt="play icon" />
-              play showreel
-            </a>
-            <h1 class="home__title">
-              Enjoy studying with Createx Online Courses
-            </h1>
-            <div class="home__btn">
-              <button class="home__btn2 section__btn2">about us</button>
-              <button class="home__btn1 section__btn1">explore courser</button>
+        <header class="header">
+          <div class="header__wrapper">
+            <div class="header__left">
+              <a href="./index.html" class="header__logo">
+                <img src="./images/logo.png" alt="logo image" />
+              </a>
+              <nav class="header__navbar">
+                <ul class="header__list">
+                  <li class="header__item">
+                    <a href="#" class="header__link">about us</a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header__link">courser</a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header__link">events</a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header__link">blog</a>
+                  </li>
+                  <li class="header__item">
+                    <a href="#" class="header__link">contacts</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="header__right">
+              <button class="header__btn section__btn1">
+                get consultation
+              </button>
+              <button class="header__auth">log in / register</button>
+              <img
+                class="header__profile"
+                src="./images/icons/Profile.svg"
+                alt="profile icon"
+              />
             </div>
           </div>
-          <div class="home__right">
-            <img src="./images/illustration (1).png" alt="home image" />
+        </header>
+      </div>
+      <!-- header section ends -->
+      <!-- home section starts -->
+      <div class="home">
+        <div class="container">
+          <div class="home__wrapper">
+            <div class="home__left">
+              <a class="home__play" href="#">
+                <img src="" alt="play icon" />
+                play showreel
+              </a>
+              <h1 class="home__title">
+                Enjoy studying with Createx Online Courses
+              </h1>
+              <div class="home__btn">
+                <button class="home__btn2 section__btn2">about us</button>
+                <button class="home__btn1 section__btn1">
+                  explore courser
+                </button>
+              </div>
+            </div>
+            <div class="home__right">
+              <img src="./images/illustration (1).png" alt="home image" />
+            </div>
           </div>
         </div>
       </div>
+      <!-- home section ends -->
+      <!-- stats section starts -->
+      <section class="stats">
+        <div class="container">
+          <div class="stats__wrapper">
+            <div class="starts__item">
+              <h2 class="starts__title section__title">1200</h2>
+              <p class="starts__description">students graduet</p>
+            </div>
+            <div class="starts__item">
+              <span class="stats__circle"></span>
+              <h2 class="starts__title section__title">84</h2>
+              <p class="starts__description">complited coursers</p>
+            </div>
+            <div class="starts__item">
+              <span class="stats__circle"></span>
+              <h2 class="starts__title section__title">16</h2>
+              <p class="starts__description">qualified tutors</p>
+            </div>
+            <div class="starts__item">
+              <span class="stats__circle"></span>
+              <h2 class="starts__title section__title">5</h2>
+              <p class="starts__description">years of expreince</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- starts section ends -->
     </div>
-    <!-- home section ends -->
-    <!-- stats section starts -->
-    <section class="stats">
-      <div class="container">
-        <div class="stats__wrapper">
-          <div class="starts__item">
-            <h2 class="starts__title section__title">1200</h2>
-            <p class="starts__description">students graduet</p>
-          </div>
-          <div class="starts__item">
-            <span class="stats__circle"></span>
-            <h2 class="starts__title section__title">84</h2>
-            <p class="starts__description">complited coursers</p>
-          </div>
-          <div class="starts__item">
-            <span class="stats__circle"></span>
-            <h2 class="starts__title section__title">16</h2>
-            <p class="starts__description">qualified tutors</p>
-          </div>
-          <div class="starts__item">
-            <span class="stats__circle"></span>
-            <h2 class="starts__title section__title">5</h2>
-            <p class="starts__description">years of expreince</p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- starts section ends -->
   </body>
 </html>
