feat: added about section html structure

--- a/index.html
+++ b/index.html
@@ -106,5 +106,91 @@
       </section>
       <!-- starts section ends -->
     </div>
+    <!-- about section starts -->
+    <div class="about">
+      <div class="container">
+        <div class="about__wrapper"></div>
+        <div class="about__left">
+          <img src="./images/image.png" alt="about image" />
+        </div>
+        <div class="about__right">
+          <h3 class="about__subtitle section__subtitle">who we are</h3>
+          <h2 class="about__title section__title">why createx?</h2>
+          <ul class="about__list">
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </li>
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                <li class="about__item">
+                  <img
+                    class="about__check"
+                    src="./images/bulleted-line.svg"
+                    alt="check icon"
+                  />
+                  <p class="about__text">
+                    A fermentum in morbi pretium aliquam adipiscing donec
+                    tempus.
+                  </p>
+                </li>
+              </p>
+            </li>
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </li>
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </li>
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </li>
+            <li class="about__item">
+              <img
+                class="about__check"
+                src="./images/bulleted-line.svg"
+                alt="check icon"
+              />
+              <p class="about__text">
+                A fermentum in morbi pretium aliquam adipiscing donec tempus.
+              </p>
+            </li>
+          </ul>
+          <button class="about__btn section__btn1">more about us</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
